- js/lang/th.js (all versions - new)
- js/lang/mk.js (all versions - new)
- js/lang/nl.js (all versions)
- js/lang/fa.js (all versions - new)
- js/lang/pt-pt.js (all versions - new)
- lib/lang/et.php (all versions - new)
- lib/lang/th.php (all versions - new)
- lib/lang/mk.php (all versions - new)
- lib/lang/nl.php (all versions)
- lib/lang/fa.js (all versions - new)
- lib/lang/pt-br.php (all versions)
- lib/lang/pt-pt.php (all versions - new)
- lib/class/AJAXChatTemplate.php (all versions)
- lib/config.php[.example] (all versions)


Version 0.8.7 (?.?.2013)
-------------------------------
Notice: 
- Minimum php version is now 5 (was 4).
- phpbb2 branch discontinued.

New features:
- Added normal Dutch localization (moved existing nl to nl-be) - thanks to Patrick Donker
- Hide shoutbox input for users without write permissions - thanks to Felix Eckhofer

Bugfixes:
- Updated Russian and Norwegian localizations - thanks to Il'ya A. Lykov.
- Methods called statically are now declared as static to meet php 5.4 strict standards.
- Fixed case when messages were not displayed to users on page load if last message was deleted - thanks to KEMBL KEMBL.
- Fixed exploit using img tag to pass text request var.
- Use array literal notation for javascript arrays
- Change preg_replace with /e to preg_replace_callback in AJAXChatTemplate.php - thanks to Jan Kröpke
- Fixed browser crashing bug with certain long words - thanks to Clint
- Properly detect and report mysqli connection errors.

Changed files:
- lib/class/AJAXChat.php (all versions)
- lib/class/AJAXChatFileSystem.php (all versions)
- lib/class/AJAXChatEncoding.php (all versions)
- lib/class/AJAXChatString.php (all versions)
- lib/class/AJAXChatTemplate.php (all versions)
- lib/class/AJAXChatMySQLiDataBase.php
- lib/lang/nl.php (all versions)
- lib/lang/nl-be.php (all versions)
- js/lang/ru.js (all versions)
- js/lang/nl.js (all versions)
- js/lang/nl-be.js (all versions)
- js/lang/no.js (all versions)